# spider-text2sql-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: phase1.sh
src/: __init__.py
src/phase1/: __init__.py  download_spider.py  explore_spider.py  paths.py
src/phase1/browser/: Home.py
src/phase1/browser/pages/: 1_Splits_Browser.py  2_Schema_Explorer.py  3_SQLite_Query.py  4_Linked_Schemas.py  5_Prompt_Viewer.py
src/phase2/: __init__.py  prompts.py  schema_linker.py
src/phase3/: __init__.py  dataset.py  tokenizer.py
