[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spider-text2sql-pipeline"
version = "0.1.0"
description = "Autonomous Text-to-SQL LLM agent pipeline on Spider (QLoRA + self-correction)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
